--- a/config.org
+++ b/config.org
@@ -26,19 +26,18 @@
       user-mail-address "crsmithdev@gmail.com"
       inhibit-splash-screen t
       initial-scratch-message nil
-      backup-directory-alist '(("." . "~/.emacs.d/backups"))
+      backup-directory-alist '(("." . (concat user-emacs-directory "backups")))
+      ;backup-directory-alist '(("." . "~/.emacs.d/backups"))
       ring-bell-function 'ignore
       visible-bell t)
       
-;; TODO conditional
-(setq initial-frame-alist '((top . 25) (left . 840) (width . 120) (height . 81)))
-
 (tool-bar-mode 0)
 (menu-bar-mode 0)
 (scroll-bar-mode 0)
 (prefer-coding-system 'utf-8)
 (column-number-mode 1)
 (fset 'yes-or-no-p 'y-or-n-p)
+(desktop-save-mode 1)
 #+END_SRC
 
 * Essentials
